Support rolling upgrade for system graph
* All system graph initialization and upgrade paths have been unified
* Security graph initialization is independent of whether auth is enabled or not
* Unified all clustered and standalone system graph initialization
* Migration from flat file auth is considered a version upgrade
* Migration is supported from 3.5, 3.6, 4.0 and 4.1 drops
* Rolling upgrade is supported for 4.0 and newer versions
* Added new upgrade setting to disable automatic upgrading in standalone
* Removed PredefinedRolesBuilder and dependency from roles to Shiro